--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="register">Register</string>
     <string name="name">Name</string>
+    <string name="type_a_message">Type a message</string>
 </resources>
